WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169149
REGRESSION (
r209760
): Apple Pay doesn't work on casper.com, shopspring.com, maybe other sites
https://bugs.webkit.org/show_bug.cgi?id=169149
Summary
REGRESSION (r209760): Apple Pay doesn't work on casper.com, shopspring.com, m...
Sam Weinig
Reported
2017-03-03 14:07:51 PST
REGRESSION (
r209760
): Apple Pay doesnt work on casper.com, shopspring.com, maybe other sites
Attachments
Patch
(5.25 KB, patch)
2017-03-03 14:12 PST
,
Sam Weinig
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2017-03-03 14:12:52 PST
Created
attachment 303340
[details]
Patch
Sam Weinig
Comment 2
2017-03-03 14:16:17 PST
<
rdar://problem/30313445
>
Sam Weinig
Comment 3
2017-03-03 14:18:00 PST
Committed
r213385
: <
http://trac.webkit.org/changeset/213385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug