REGRESSION (r209760): Apple Pay doesn't work on casper.com, shopspring.com, maybe other sites <rdar://problem/30313445> https://bugs.webkit.org/show_bug.cgi?id=169149

Reviewed by Simon Fraser.

Source/WebCore:

Relax restriction that the ApplePayShippingMethod sequence must not be empty. This
was incorrect.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::convertAndValidate):

LayoutTests:

* http/tests/ssl/applepay/ApplePaySession-expected.txt:
* http/tests/ssl/applepay/ApplePaySession.html:
Update test for relaxed ApplePayShippingMethod sequence requirements.


Canonical link: https://commits.webkit.org/186165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213385 268f45cc-cd09-0410-ab3c-d52691b4dbfc